tests/test67.rael.exp
Error [tests/test67.rael:3:9]: Unrecognized token
|     log rael
|         ^
