tests/test67.rael
if 1 = 1 {
    log 87
    log rael
}